build(front): upgrades svelte and `npm update`s
closes #517

--- a/front/package.json
+++ b/front/package.json
@@ -1,48 +1,46 @@
 {
-	"name": "dgrebb.com",
-	"version": "2.5.1",
-	"private": true,
-	"scripts": {
-		"dev.local": "vite --config vite.local.config.js dev",
-		"dev": "vite --config vite.config.js dev",
-		"build.local": "WARN_ONLY=true vite --config vite.local.config.js build",
-		"build": "vite --config vite.config.js build",
-		"preview.local": "vite --config vite.local.config.js preview",
-		"preview": "vite --config vite.config.js preview",
-		"postinstall": "patch-package"
-	},
-	"devDependencies": {
-		"@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.6.0",
-		"@iconify-json/entypo-social": "^1.1.4",
-		"@iconify-json/gg": "^1.1.5",
-		"@iconify-json/icomoon-free": "^1.1.4",
-		"@iconify-json/icon-park-outline": "^1.1.11",
-		"@iconify-json/line-md": "^1.1.25",
-		"@iconify-json/mdi": "^1.1.52",
-		"@iconify-json/ph": "^1.1.5",
-		"@iconify-json/typcn": "^1.1.4",
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.4",
-		"autoprefixer": "^10.4.14",
-		"patch-package": "^8.0.0",
-		"postcss": "^8.4.24",
-		"postcss-import": "^15.1.0",
-		"postcss-nesting": "^12.0.0",
-		"prettier": "^3.0.0",
-		"prettier-plugin-css-order": "^2.0.0",
-		"prettier-plugin-svelte": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.4.1",
-		"slugger": "^1.0.1",
-		"svelte": "^4.1.1",
-		"svelte-highlight": "^7.3.0",
-		"svelte-meta-tags": "^2.8.0",
-		"tailwindcss": "^3.3.2",
-		"unplugin-icons": "^0.16.3",
-		"vite": "^4.4.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sentry/sveltekit": "^7.56.0",
-		"svelte-markdown": "^0.3.0"
-	}
+  "name": "dgrebb.com",
+  "version": "2.5.1",
+  "private": true,
+  "scripts": {
+    "dev.local": "vite --config vite.local.config.js dev",
+    "dev": "vite --config vite.config.js dev",
+    "build.local": "WARN_ONLY=true vite --config vite.local.config.js build",
+    "build": "vite --config vite.config.js build",
+    "preview.local": "vite --config vite.local.config.js preview",
+    "preview": "vite --config vite.config.js preview",
+    "postinstall": "patch-package"
+  },
+  "devDependencies": {
+    "@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.6.0",
+    "@iconify-json/entypo-social": "^1.1.4",
+    "@iconify-json/gg": "^1.1.5",
+    "@iconify-json/icomoon-free": "^1.1.4",
+    "@iconify-json/icon-park-outline": "^1.1.11",
+    "@iconify-json/line-md": "^1.1.25",
+    "@iconify-json/mdi": "^1.1.52",
+    "@iconify-json/ph": "^1.1.5",
+    "@iconify-json/typcn": "^1.1.4",
+    "@sentry/sveltekit": "^7.56.0",
+    "@sveltejs/adapter-static": "^2.0.2",
+    "@sveltejs/kit": "^1.20.4",
+    "autoprefixer": "^10.4.14",
+    "patch-package": "^8.0.0",
+    "postcss": "^8.4.24",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-css-order": "^2.0.0",
+    "prettier-plugin-svelte": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "slugger": "^1.0.1",
+    "svelte": "^4.1.2",
+    "svelte-highlight": "^7.3.0",
+    "svelte-markdown": "^0.3.0",
+    "svelte-meta-tags": "^2.8.0",
+    "tailwindcss": "^3.3.2",
+    "unplugin-icons": "^0.16.3",
+    "vite": "^4.4.9"
+  },
+  "type": "module"
 }
