--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -6,29 +6,16 @@
   "scripts": {
     "approve": "backstop approve --config=backstop.config.js",
     "backstop": "backstop",
-    "boot": "ENVIRONMENT='local' pm2 start",
-    "boot.l": "ENVIRONMENT='local' pm2 start",
-    "boot.s": "ENVIRONMENT='staging' pm2 start",
-    "boot.p": "ENVIRONMENT='production' pm2 start",
+    "boot": "ENVIRONMENT=\"$ENV\" pm2 start",
     "dev": "nodemon ./scenarios/index.js",
     "mon": "pm2 monit",
     "pm2": "node ./node_modules/pm2/bin/pm2",
-    "ref": "backstop reference --config=backstop.config.js",
-    "ref.s": "ENVIRONMENT='staging' backstop reference --config=backstop.config.js",
-    "ref.p": "ENVIRONMENT='production' backstop reference --config=backstop.config.js",
-    "remote": "backstop remote --config=backstop.config.js",
-    "remote.l": "ENVIRONMENT='local' backstop remote --config=backstop.config.js",
-    "remote.s": "ENVIRONMENT='staging' backstop remote --config=backstop.config.js",
-    "remote.p": "ENVIRONMENT='production' backstop remote --config=backstop.config.js",
+    "ref": "ENVIRONMENT=\"$ENV\" backstop reference --config=backstop.config.js",
+    "remote": "ENVIRONMENT=\"$ENV\" backstop remote --config=backstop.config.js",
     "serve": "http-server ../../front/build -p 8080",
-    "start": "ENVIRONMENT='local' pm2 start ecosystem.config.js && pm2 monit",
-    "start.l": "ENVIRONMENT='local' pm2 start ecosystem.config.js && pm2 monit",
-    "start.s": "ENVIRONMENT='staging' pm2 start ecosystem.config.js && pm2 monit",
-    "start.p": "ENVIRONMENT='production' pm2 start ecosystem.config.js && pm2 monit",
+    "start": "ENVIRONMENT=\"$ENV\" pm2 start ecosystem.config.js && pm2 monit",
     "stop": "pm2 stop backstop && pm2 delete backstop && kill -9 $( lsof -i:3000 -t )",
-    "test": "backstop test --config=backstop.config.js",
-    "test.s": "ENVIRONMENT='staging' backstop test --config=backstop.config.js",
-    "test.p": "ENVIRONMENT='production' backstop test --config=backstop.config.js",
+    "test": "ENVIRONMENT=\"$ENV\" backstop test --config=backstop.config.js",
     "post-install": "patch-package"
   },
   "keywords": [],
