--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -1,4 +1,4 @@
-name: 🚜 B&D FE
+name: 🚜 B&D Front End
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   front:
-    name: Frontend
+    name: Build & Deploy
     concurrency:
       group: frontend
       cancel-in-progress: true
@@ -19,7 +19,7 @@ jobs:
       name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
 
     steps:
-      - name: ⬇ Checkout
+      - name:  Checkout
         uses: actions/checkout@v3
         with:
           repository: dgrebb/dgrebb.com
@@ -47,15 +47,18 @@ jobs:
           echo PUBLIC_ENV=${{ secrets.PUBLIC_ENV }} >> front/.env
           cat front/.env
 
-      - name: ⬢ Install & Build
+      - name: ⬢ Setup Node & Cache
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
           cache: "npm"
           cache-dependency-path: front/package-lock.json
         
-      - run: cd front && npm ci
-      - run: cd front && npm run build
+      - name: ↧ Install
+        run: cd front && npm ci
+
+      - name: ↻ Build
+        run: cd front && npm run build
 
       - name: 🤖 Robots
         if: ${{ github.ref_name == 'main' }}
