--- a/.github/workflows/dispatch-bd-fe--cms.yml
+++ b/.github/workflows/dispatch-bd-fe--cms.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: 🛰️ Dispatch B&D FE
         run: |
-          curl -X POST https://api.github.com/repos/dgrebb/dgrebb.com/actions/workflows/${{ secrets.FRONTEND_WORKFLOW_ID }}/dispatches \
+          curl -X POST https://api.github.com/repos/dgrebb/dgrebb.com/actions/workflows/bd-fe.yml/dispatches \
           -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
           --data '{"ref": "${{ github.ref_name }}"}'
