--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "2.5.1",
   "private": true,
   "scripts": {
+    "check": "svelte-check",
     "dev.l": "vite --config vite.local.config.js dev",
     "dev.p": "vite --config vite.config.js dev",
     "dev": "vite --config vite.config.js dev",
@@ -38,6 +39,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "slugger": "^1.0.1",
     "svelte": "^4.1.2",
+    "svelte-check": "^3.5.0",
     "svelte-highlight": "^7.3.0",
     "svelte-markdown": "^0.3.0",
     "svelte-meta-tags": "^2.8.0",
