fix(front): fixes path aliases for IDE via `jsconfig.json`

--- a/front/jsconfig.json
+++ b/front/jsconfig.json
@@ -5,7 +5,9 @@
     "paths": {
       "@api": ["./src/lib/api"],
       "@components": ["./src/lib/components"],
+      "@components/*": ["./src/lib/components/*"],
       "@layout": ["./src/lib/layout"],
+      "@layout/*": ["./src/lib/layout/*"],
       "@store": ["./src/lib/store"],
       "@styles": ["./src/lib/styles"],
       "@utils": ["./src/lib/_utils"],
