--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -105,5 +105,5 @@ jobs:
 
       - name: 📋 Summary
         run: |
-          SUMMARY=$'# Workflow Summary\## Run Initiator\n- Actor: ${{ env.GITHUB_ACTOR }}\n- Event: ${{ env.GITHUB_EVENT_NAME }} ## Sentry Release\n- Environment: ${{ github.ref_name == 'main' && 'production' || 'staging' }}\n- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})\n- Dist: ${{ env.DIST }}'
+          SUMMARY=$'# Workflow Summary\## Run Initiator\n- Actor: ${{ vars.GITHUB_ACTOR }}\n- Event: ${{ vars.GITHUB_EVENT_NAME }}\n ## Sentry Release\n- Environment: ${{ github.ref_name == 'main' && 'production' || 'staging' }}\n- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})\n- Dist: ${{ env.DIST }}'
           echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
