--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -21,9 +21,6 @@ jobs:
     environment:
       name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
 
-    env:
-      ENVIRONMENT_NAME: ${{ github.ref_name == 'main' && 'production' || 'staging' }}
-
     steps:
       - name: 𐂷 Checkout
         uses: actions/checkout@v3
@@ -107,6 +104,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: 📋 Summary
+        env:
+          ENVIRONMENT_NAME: ${{ github.ref_name == 'main' && 'production' || 'staging' }}
         run: |
-          SUMMARY=$'# Job Summary\n## Run Initiator\n- Actor: $GITHUB_ACTOR\n- Event: $GITHUB_EVENT_NAME\n ## Sentry Release\n- Environment: $ENVIRONMENT_NAME\n- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})\n- Dist: ${{ env.DIST }}'
+          SUMMARY=$'# Job Summary \n##Run Details \n- Environment: ${{ env.ENVIRONMENT_NAME }}\n- Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }}) \n## Run Initiator\n- Actor: ${{ github.actor }}\n- Event: ${{ github.event_name }}\n## Sentry Release\n- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})\n- Dist: ${{ env.DIST }}'
           echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
