fix(github): adjusts format/use of vars in workflow summary

--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -24,18 +24,25 @@ jobs:
     steps:
       - name: 📋 Summary
         env:
-          name: "${{env.BRANCH_NAME}}"
+          name: "${{ env.BRANCH_NAME }}"
           EVENT_NAME: "${{ github.event_name }}"
         run: |
           echo "RELEASE_NAME=stg-${name/\//-}" >> $GITHUB_ENV
           echo "DIST=$(date +%y%m%d-%H%M%S)" >> $GITHUB_ENV
           echo "DEPLOY_ENV=${{ vars.ENV_NAME }}" >> $GITHUB_ENV
           echo '# Job Summary' >> $GITHUB_STEP_SUMMARY
-          echo '## Run Details \n- Environment: ${{ vars.ENV_NAME }}\n- Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
+          echo '## Run Details' >> $GITHUB_STEP_SUMMARY
+          echo 'Environment: ${{ env.DEPLOY_ENV }}' >> $GITHUB_STEP_SUMMARY
+          echo 'Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
           if [ "$EVENT_NAME" = "pull_request" ]; then 
             echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }})' >> $GITHUB_STEP_SUMMARY
           fi
-          echo '## Run Initiator\n- Actor: ${{ github.actor }}\n- Event: ${{ github.event_name }}\n## Sentry Release\n- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})\n- Dist: ${{ env.DIST }}' >> $GITHUB_STEP_SUMMARY
+          echo '## Run Initiator'
+          echo 'Actor: ${{ github.actor }}' >> $GITHUB_STEP_SUMMARY 
+          echo 'Event: ${{ github.event_name }}' >> $GITHUB_STEP_SUMMARY
+          echo '## Sentry Release' >> $GITHUB_STEP_SUMMARY
+          echo '- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})' >> $GITHUB_STEP_SUMMARY
+          echo '- Dist: ${{ env.DIST }}' >> $GITHUB_STEP_SUMMARY
 
       - name: 𐂷 Checkout
         uses: actions/checkout@v3
