ci(github): refactors summary step into its own job
introduces job outputs

--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -11,9 +11,45 @@ env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
-  build:
+  summary:
+    name: 📋 Summary
+    runs-on: ubuntu-latest
+    outputs:
+      DEPLOY_ENV: ${{ steps.summary.outputs.DEPLOY_ENV }}
+      RELEASE_NAME: ${{ steps.summary.outputs.RELEASE_NAME }}
+      DIST: ${{ steps.summary.outputs.DIST }}
+
+    steps:
+      - name: ✍ Summarize
+        id: summary
+        env:
+          name: "${{ env.BRANCH_NAME }}"
+          EVENT_NAME: "${{ github.event_name }}"
+        run: |
+          echo "RELEASE_NAME=stg-${name/\//-}" >> $GITHUB_ENV
+          echo "RELEASE_NAME=stg-${name/\//-}" >> "$GITHUB_OUTPUT"
+          echo "DIST=$(date +%y%m%d-%H%M%S)" >> $GITHUB_ENV
+          echo "DIST=$(date +%y%m%d-%H%M%S)" >> "$GITHUB_OUTPUT"
+          echo "DEPLOY_ENV=${{ vars.ENV_NAME }}" >> $GITHUB_ENV
+          echo "DEPLOY_ENV=${{ vars.ENV_NAME }}" >> "$GITHUB_OUTPUT"
+          echo '# Job Summary' >> $GITHUB_STEP_SUMMARY
+          echo '## Run Details' >> $GITHUB_STEP_SUMMARY
+          echo 'Environment: $DEPLOY_ENV' >> $GITHUB_STEP_SUMMARY
+          echo '- Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
+          if [ "$EVENT_NAME" = "pull_request" ]; then 
+            echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }})' >> $GITHUB_STEP_SUMMARY
+          fi
+          echo '## Run Initiator'
+          echo '- Actor: ${{ github.actor }}' >> $GITHUB_STEP_SUMMARY 
+          echo '- Event: ${{ github.event_name }}' >> $GITHUB_STEP_SUMMARY
+          echo '## Sentry Release' >> $GITHUB_STEP_SUMMARY
+          echo '- Release: [$RELEASE_NAME](https://dgrebb.sentry.io/releases/$RELEASE_NAME)' >> $GITHUB_STEP_SUMMARY
+          echo '- Dist: $DIST' >> $GITHUB_STEP_SUMMARY
+
+  build_deploy:
     name: 🚜 Build & Deploy
     runs-on: ubuntu-latest
+    needs: summary
     concurrency:
       group: frontend
       cancel-in-progress: true
@@ -22,28 +58,6 @@ jobs:
       name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
 
     steps:
-      - name: 📋 Summary
-        env:
-          name: "${{ env.BRANCH_NAME }}"
-          EVENT_NAME: "${{ github.event_name }}"
-        run: |
-          echo "RELEASE_NAME=stg-${name/\//-}" >> $GITHUB_ENV
-          echo "DIST=$(date +%y%m%d-%H%M%S)" >> $GITHUB_ENV
-          echo "DEPLOY_ENV=${{ vars.ENV_NAME }}" >> $GITHUB_ENV
-          echo '# Job Summary' >> $GITHUB_STEP_SUMMARY
-          echo '## Run Details' >> $GITHUB_STEP_SUMMARY
-          echo 'Environment: ${{ env.DEPLOY_ENV }}' >> $GITHUB_STEP_SUMMARY
-          echo 'Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
-          if [ "$EVENT_NAME" = "pull_request" ]; then 
-            echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }})' >> $GITHUB_STEP_SUMMARY
-          fi
-          echo '## Run Initiator'
-          echo 'Actor: ${{ github.actor }}' >> $GITHUB_STEP_SUMMARY 
-          echo 'Event: ${{ github.event_name }}' >> $GITHUB_STEP_SUMMARY
-          echo '## Sentry Release' >> $GITHUB_STEP_SUMMARY
-          echo '- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})' >> $GITHUB_STEP_SUMMARY
-          echo '- Dist: ${{ env.DIST }}' >> $GITHUB_STEP_SUMMARY
-
       - name: 𐂷 Checkout
         uses: actions/checkout@v3
         with:
@@ -70,7 +84,6 @@ jobs:
           echo API_KEY=${{ secrets.API_KEY }} >> front/.env
           echo PUBLIC_SENTRY_DSN=${{ secrets.PUBLIC_SENTRY_DSN }} >> front/.env
           echo PUBLIC_ENV=${{ secrets.PUBLIC_ENV }} >> front/.env
-          echo SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} >> front/.env
           cat front/.env
 
       - name: ⬢ Setup Node & Cache
@@ -87,10 +100,10 @@ jobs:
         id: build
         run: >
           cd front &&
-          DEPLOY_ENV=${{ env.DEPLOY_ENV }}
-          RELEASE_NAME=${{ env.RELEASE_NAME }}
+          DEPLOY_ENV=${{ needs.summary.outputs.DEPLOY_ENV }}
+          RELEASE_NAME=${{ needs.summary.outputs.RELEASE_NAME }}
           SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} 
-          DIST=${{ env.DIST }}
+          DIST=${{ needs.summary.outputs.DIST }}
           npm run build
 
       - name: 🤖 Robots
