--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -12,39 +12,44 @@ env:
 
 jobs:
   summary:
-    name: 📋 Summary
+    name: 📋 Details
     runs-on: ubuntu-latest
     outputs:
       DEPLOY_ENV: ${{ steps.summary.outputs.DEPLOY_ENV }}
       RELEASE_NAME: ${{ steps.summary.outputs.RELEASE_NAME }}
       DIST: ${{ steps.summary.outputs.DIST }}
 
+    environment:
+      name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
+
     steps:
-      - name: ✍ Summarize
-        id: summary
+      - name: 🤿 Set Release Vars
         env:
           name: "${{ env.BRANCH_NAME }}"
-          EVENT_NAME: "${{ github.event_name }}"
         run: |
           echo "RELEASE_NAME=stg-${name/\//-}" >> $GITHUB_ENV
-          echo "RELEASE_NAME=stg-${name/\//-}" >> "$GITHUB_OUTPUT"
           echo "DIST=$(date +%y%m%d-%H%M%S)" >> $GITHUB_ENV
-          echo "DIST=$(date +%y%m%d-%H%M%S)" >> "$GITHUB_OUTPUT"
           echo "DEPLOY_ENV=${{ vars.ENV_NAME }}" >> $GITHUB_ENV
-          echo "DEPLOY_ENV=${{ vars.ENV_NAME }}" >> "$GITHUB_OUTPUT"
+
+      - name: ✍ Summarize
+        id: summary
+        run: |
           echo '# Job Summary' >> $GITHUB_STEP_SUMMARY
           echo '## Run Details' >> $GITHUB_STEP_SUMMARY
-          echo 'Environment: $DEPLOY_ENV' >> $GITHUB_STEP_SUMMARY
+          echo '- Environment: ${{ env.DEPLOY_ENV }}' >> $GITHUB_STEP_SUMMARY
           echo '- Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
-          if [ "$EVENT_NAME" = "pull_request" ]; then 
+          if [ "${{ github.event_name }}" = "pull_request" ]; then 
             echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }})' >> $GITHUB_STEP_SUMMARY
           fi
           echo '## Run Initiator'
           echo '- Actor: ${{ github.actor }}' >> $GITHUB_STEP_SUMMARY 
           echo '- Event: ${{ github.event_name }}' >> $GITHUB_STEP_SUMMARY
           echo '## Sentry Release' >> $GITHUB_STEP_SUMMARY
-          echo '- Release: [$RELEASE_NAME](https://dgrebb.sentry.io/releases/$RELEASE_NAME)' >> $GITHUB_STEP_SUMMARY
-          echo '- Dist: $DIST' >> $GITHUB_STEP_SUMMARY
+          echo '- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})' >> $GITHUB_STEP_SUMMARY
+          echo '- Dist: ${{ env.DIST }}' >> $GITHUB_STEP_SUMMARY
+          echo "RELEASE_NAME=${{ env.RELEASE_NAME }}" >> $GITHUB_OUTPUT
+          echo "DIST=${{ env.DIST }}" >> $GITHUB_OUTPUT
+          echo "DEPLOY_ENV=${{ env.DEPLOY_ENV }}" >> $GITHUB_OUTPUT
 
   build_deploy:
     name: 🚜 Build & Deploy
@@ -65,8 +70,17 @@ jobs:
           ref: ${{ github.ref }}
           token: ${{ github.token }}
           fetch-depth: 0
+        
+      - name: ≠ Changes
+        run: |
+          if [ "$EVENT_NAME" = "pull_request" ]; then 
+            echo '### Changes:' >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+            git show --name-only --format=tformat: >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+          fi
 
-      - name: ⚙ Set .env
+      - name: 🎩 Setup Svelte Environment
         run: |
           touch front/.env
           echo PUBLIC_API_URL='${{ secrets.PUBLIC_API_URL }}' >> front/.env
